<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<resources>
    <string name="app_name">SoPra App</string>
    <string name="login">Login</string>
    <string name="admin_mode">Admin Mode</string>
    <string name="routes">Routes</string>
    <string name="waypoints">Waypoints</string>
    <string name="close">Close</string>
    <string name="accept">Accept</string>
    <string name="guards">Guards</string>
    <string name="forename">Forename:</string>
    <string name="surname">Surname:</string>
    <string name="guard_id">Guard ID:</string>
    <string name="userpw">Password:</string>
    <string name="acceptGuard">Accept</string>
    <string name="deleteGuard">Delete</string>
    <string name="name">Name</string>
    <string name="nfc_tag">NFC Tag</string>
    <string name="id">ID</string>
    <string name="edit_guard">Edit Guard</string>
    <string name="edit_waypoint">Edit Waypoint</string>
    <string name="guard_mode">Guard Mode</string>
    <string name="select_a_route_to_start">Select a route to start</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="schedule">Schedule</string>
    <string name="log_out">Log out</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="route">Route:</string>
    <string name="start_time">Start time:</string>
    <string name="saved_bitmap">de.uni_stuttgart.informatik.sopra.sopraapp.saved_bitmap</string>
    <string name="remaining_time">Remaining time:</string>
    <string name="next_waypoint">Next waypoint:</string>
    <string name="pause">Pause</string>
    <string name="note">Note:</string>
    <string name="cancel">Cancel</string>
    <string name="complete_route">Complete Route:</string>
    <string name="write">Write</string>
    <string name="write_a_message">Write a message:</string>
    <string name="finish_route">Finish route</string>
    <string name="route_fragment">Route Fragment</string>
    <string name="profile">Profile</string>
</resources>
