<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.uni_stuttgart.informatik.sopra.sopraapp.GuardActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/etForname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEditGuard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etForname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSurname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pwUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUserId"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="95dp"
        android:ems="10" />

    <TextView
        android:id="@+id/tvGuardPassword"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_below="@+id/etUserId"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/userpw"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tvGuardId"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="313dp"
        android:text="@string/guard_id"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tvGuardForename"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_below="@+id/etUserId"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-199dp"
        android:text="@string/forename"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tvGuardSurname"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_below="@+id/etUserId"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-112dp"
        android:text="@string/surname"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnAcceptGuard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwUserPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:text="@string/accept" />

    <Button
        android:id="@+id/btnDeleteGuard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwUserPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/deleteGuard" />

    <Button
        android:id="@+id/btnEditGuard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/edit_guard" />

</RelativeLayout>