<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuardModeActivity">

    <TextView
        android:id="@+id/tvGuardMode"
        android:layout_width="188dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/guard_mode"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectARouteToStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/select_a_route_to_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGuardMode"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginTop="152dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectARouteToStart"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvLoggedInAs"
        android:layout_width="94dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/logged_in_as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGuardMode" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/tvLoggedInAs"
        app:layout_constraintTop_toBottomOf="@+id/tvGuardMode" />

</androidx.constraintlayout.widget.ConstraintLayout>